[gd_scene load_steps=4 format=3 uid="uid://b8a53uaieyrnj"]

[ext_resource type="Script" uid="uid://b61kbebi5bq7x" path="res://src/scenes/ui/icons/slot_icons/slot_icon.gd" id="1_qdcrt"]
[ext_resource type="Texture2D" uid="uid://ctscla6enlb4r" path="res://owned_assets/icons/shield_icon2.png" id="2_ouln6"]
[ext_resource type="Theme" uid="uid://mdv6ns2bkvo" path="res://src/scenes/resources/themes/black_label.tres" id="3_qdcrt"]

[node name="SlotIcon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_qdcrt")
metadata/_custom_type_script = "uid://b61kbebi5bq7x"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureControl" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SlotTexture" type="TextureRect" parent="AspectRatioContainer/TextureControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_ouln6")
expand_mode = 3
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="IconLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_qdcrt")
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
